// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-magic-numbers не ошибки индекс теста: 0 1`] = `Array []`;

exports[`no-magic-numbers не ошибки индекс теста: 1 1`] = `Array []`;

exports[`no-magic-numbers не ошибки индекс теста: 2 1`] = `Array []`;

exports[`no-magic-numbers не ошибки индекс теста: 3 1`] = `Array []`;

exports[`no-magic-numbers не ошибки индекс теста: 4 1`] = `Array []`;

exports[`no-magic-numbers не ошибки индекс теста: 5 1`] = `Array []`;

exports[`no-magic-numbers не ошибки индекс теста: 6 1`] = `Array []`;

exports[`no-magic-numbers ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 12,
    "endColumn": 16,
    "endLine": 2,
    "line": 2,
    "message": "No magic number: 1000.",
    "messageId": "noMagic",
    "nodeType": "Literal",
    "ruleId": "@typescript-eslint/no-magic-numbers",
    "severity": 1,
  },
]
`;

exports[`no-magic-numbers ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 21,
    "endColumn": 24,
    "endLine": 2,
    "line": 2,
    "message": "No magic number: 100.",
    "messageId": "noMagic",
    "nodeType": "Literal",
    "ruleId": "@typescript-eslint/no-magic-numbers",
    "severity": 1,
  },
]
`;
